syntax="proto3";

package voiladev.voilacrawl.pkg.types;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.populate_all) = true;
option go_package = "types";

// Crawler
message Crawler {
	// Status
	message Status {
		// Hostname
		string hostname            = 1;
		// MaxAPIConcurrency
		int32 maxAPIConcurrency    = 3;
		// MaxMQConcurrency
		int32 maxMQConcurrency     = 4;
		// CurrentConcurrency
		int32 currentConcurrency   = 5;
		// CurrentMQConcurrency
		int32 currentMQConcurrency = 6;
	}
    // ID
    string id         = 1;
    // Version
    int32  version    = 2;
    // rawId
    string rawId      = 3;
    // StoreId
    string storeId    = 4;
    // AllowedDomains
    repeated string allowedDomains = 6;

    // ServeAddr
    string serveAddr  = 11;
    // Status
    repeated Status hostStatus = 12;

    // OnlineUtc
    int64  onlineUtc  = 16;
}
